Add quotes list and create quote page

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       id="layout-styles-anchor"
       href="%PUBLIC_URL%/splash-screen.css"
     />
-    <title>Metronic Theme | Keenthemes</title>
+    <title>Portal</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
   </head>
   <!-- TIP: add dark-mode class to enable dark mode -->
