add update current user and change password feature

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       id="layout-styles-anchor"
       href="%PUBLIC_URL%/splash-screen.css"
     />
-    <title>Portal</title>
+    <title>Pitesco Portal</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
 
     <script
