--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -37,7 +37,6 @@
       type="text/css"
     />
     <script src="/assets/plugins/global/plugins.bundle.js"></script>
-
     <link
       rel="stylesheet"
       type="text/css"
